--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,6 +4,10 @@
     </IfModule>
 
     RewriteEngine On
+    <IfModule mod_headers.c>
+        Header set Access-Control-Allow-Origin "*"
+    </IfModule>
+
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
